Bug 18868 - pthread_barrier_init typo has in-theory-undefined behavior
Summary: pthread_barrier_init typo has in-theory-undefined behavior
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: nptl (show other bugs)
Version: 2.22
: P2 normal
Target Milestone: 2.23
Assignee: Torvald Riegel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-25 22:25 UTC by Paul Eggert
Modified: 2016-01-15 22:04 UTC (History)
4 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments
Fix pthread_barrier_init typo (590 bytes, patch)
2015-08-25 22:25 UTC, Paul Eggert
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Eggert 2015-08-25 22:25:05 UTC
Created attachment 8549 [details]
Fix pthread_barrier_init typo

Coverity found some in-theory-undefined behavior in pthread_barrier_init due to an obvious typo.  I think it's harmless in practice but we might as well fix it.  Proposed patch attached.
Comment 1 Carlos O'Donell 2015-08-27 20:18:40 UTC
Patch looks good to me.
Comment 2 Sourceware Commits 2016-01-15 22:02:00 UTC
This is an automated email from the git hooks/post-receive script. It was
generated because a ref change was pushed to the repository containing
the project "GNU C Library master sources".

The branch, master has been updated
       via  12c3bb770dd3ea11215baf23b385dbf297a2a85c (commit)
      from  72276d6e8843db6df5971b06787f0a5e39bda138 (commit)

Those revisions listed above that are new to this repository have
not appeared on any other notification email; so we list those
revisions in full, below.

- Log -----------------------------------------------------------------
https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=12c3bb770dd3ea11215baf23b385dbf297a2a85c

commit 12c3bb770dd3ea11215baf23b385dbf297a2a85c
Author: Torvald Riegel <triegel@redhat.com>
Date:   Fri Jan 15 22:40:50 2016 +0100

    Fix pthread_barrier_init typo.
    
    Applies Paul Eggert's fix for BZ 18868.

-----------------------------------------------------------------------

Summary of changes:
 ChangeLog                   |    5 +++++
 nptl/pthread_barrier_init.c |    2 +-
 2 files changed, 6 insertions(+), 1 deletions(-)
Comment 3 Torvald Riegel 2016-01-15 22:02:19 UTC
Fixed in 12c3bb770dd3ea11215baf23b385dbf297a2a85c