Fix pthread_barrier_init typo.

Applies Paul Eggert's fix for BZ 18868.